--- a/Module_5_Challenge/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Module_5_Challenge/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- In this exercise, we were first given two data sets of mice and their results depending on the time and the drug regimen that these mice go through and how their tumor volume changes.  At first glance through the summary data frame, we are able to see which drug was the most succesful in curing the tumor, as well as how spread out each drug's effectivness were.  \n",
+    "- We also through charts saw how many of each drug regimen were studied, the percentage of each gender of mice, the box plots and outliers of 4 different drug regimens, one specific mouse's reaction towards a drug per time point, and the regression of how weight and tumor volume and if they corrolate to eachother or not. \n",
     " "
    ]
   },
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
        "249"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
        "4  Female           9          22  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
        "249"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,13 +1233,6 @@
     "filtered_maxtimedata = maxtimedata[maxtimedata['Drug Regimen'].isin(drugs)]\n",
     "filtered_maxtimedata"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
